feat: improve user management
* implement a display name
* add a public profile endpoint
